Set local variable for ispelling dictionary

--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,14 @@
-# Preface {.unnumbered}
+# Prefacio {.unnumbered}
 
-This is a Quarto book.
+Hola, esto es una pequeña prueba.
 
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
 
 ```{r}
 1 + 1
 ```
+
+<!--
+Local Variables:
+ispell-dictionary: "castellano"
+End:
+-->
