--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,13 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@book{stockIntroduccionEconometria2012,
+  title = {Introducción a la econometría},
+  author = {Stock, James H. and Watson, Mark W.},
+  date = {2012},
+  edition = {3},
+  publisher = {{Pearson}},
+  isbn = {978-84-8322-967-5},
+  langid = {spanish},
+  keywords = {Econometrics,es,Textbook},
+  annotation = {OCLC: 1153982260},
+  file = {/Users/jose/Zotero/storage/Q8LF6HDQ/Stock and Watson - 2012
+                  - Introducción a la econometría.pdf}
 }
-
-
